objects/Lead.object
<CustomObject>
    <fields>
        <fullName>License_Expires__c</fullName>
        <formula>License__r.sfLma__Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Expires</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Install_Date__c</fullName>
        <formula>License__r.sfLma__Install_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Org_ID__c</fullName>
        <formula>License__r.sfLma__Subscriber_Org_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <formula>TEXT(License__r.sfLma__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <formula>License__r.sfLma__Package_Version__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Edition__c</fullName>
        <formula>License__r.sfLma__Org_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Seats__c</fullName>
        <formula>License__r.sfLma__Licensed_Seats__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Seats</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <formula>License__r.sfLma__Is_Sandbox__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sandbox?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_Licenses__c</fullName>
        <formula>License__r.sfLma__Used_Licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>